# read_obj

./: CMakeLists.txt  README.md  test1.cpp
data/: main.cpp
